# icarous

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  RELEASE-NOTES.txt  SetAliases.sh  SetEnv.sh  UpdateModules.sh
C++/: .gitignore  CMakeLists.txt  DAAGeofencingExample  DAAGeofencingExample.cpp  IcarousExample.cpp  Makefile  README.md  README.txt  RELEASE-NOTES.txt  icarous  mission  run.sh
C++/FlightDataManager/: CMakeLists.txt  FlightData.cpp  FlightData.h  FlightDataWrapper.cpp  FlightDataWrapper.h  Geofence.cpp  Geofence.h  fence.h
C++/GeofenceMonitor/: CMakeLists.txt  GeofenceMonitor.cpp  GeofenceMonitor.h
C++/InputData/: flightplan3.txt  icarous.txt
C++/InputData/ISAAC/: IsaacInput02.txt  isaac_gf.xml
C++/Modules/: README.md
C++/Modules/ACCoRD/: CMakeLists.txt
C++/Modules/CWrapper/: Modules.i
C++/Modules/FlightDataManager/: CMakeLists.txt  FlightData.cpp  FlightData.h  FlightDataWrapper.cpp  FlightDataWrapper.h  GenericObject.h  fence.cpp  fence.h
C++/Modules/GeofenceMonitor/: CMakeLists.txt  GeofenceMonitor.cpp  GeofenceMonitor.h
C++/Modules/Plexil/: CMakeLists.txt  README
C++/Modules/TrafficMonitor/: CMakeLists.txt  TrafficMonitor.cpp  TrafficMonitor.h
C++/Modules/TrajectoryPlanners/: AstarPlan.cpp  CMakeLists.txt  Dynamics.cpp  PathPlanner.cpp  PathPlanner.h  RRTPlan.cpp
C++/TrajectoryPlanners/: AstarPlan.cpp  CMakeLists.txt  PathPlanner.cpp  PathPlanner.h
C++/TrajectoryPlanners/RRT/: CMakeLists.txt  main.cpp
C++/cmake/: FindOpenSplice.cmake
C++/include/: AircraftState.h  AlertLevels.h  AlertThresholds.h  AziEquiProjection.h  BandsRange.h  BandsRegion.h  BoundingRectangle.h  CD3D.h  CD3DTable.h  CDCylinder.h  CDPolyIter.h  Constants.h  CriteriaCore.h  Daidalus.h  DaidalusFileWalker.h  Detection3DAcceptor.h  Detection3DParameterReader.h  DetectionPolygonParameterReader.h  DetectionPolygonParameterWriter.h  ENUProjection.h  EuclideanProjection.h  GenericBands.h  GreatCircle.h  Horizontal.h  Interval.h  IntervalSet.h  KinematicBands.h  KinematicBandsCore.h  KinematicBandsParameters.h  KinematicGsBands.h  KinematicIntegerBands.h  KinematicMultiBands.h  KinematicRealBands.h  KinematicTrkBands.h  Kinematics.h  KinematicsLatLon.h  LatLonAlt.h  LossData.h  MovingPolygon3D.h  NavPoint.h  (+42 more)
C++/include/ACCoRD/: ACCoRDConfig.h  AircraftState.h  AlertLevels.h  AlertThresholds.h  AziEquiProjection.h  Bands.h  BandsCore.h  BandsRange.h  BandsRegion.h  BoundingRectangle.h  CD2D.h  CD3D.h  CDCylinder.h  CDII.h  CDIICore.h  CDIIPolygon.h  CDPolyIter.h  CDPolyIter2D.h  CDPolycarp.h  CDSI.h  CDSICore.h  CDSIPolygon.h  CDSS.h  CDSSCore.h  CR3D.h  CRSS.h  CRSSConfig.h  ColoredValue.h  ConflictBandsTwoTimes.h  ConflictData.h  Constants.h  Consts.h  CoordinationFilter.h  Criteria.h  (+131 more)
C++/params/: DaidalusQuadConfig.txt  DaidalusQuadConfig2.txt  flightplan.txt  flightplan2.txt  geofence.xml  geofence0.xml  icarous.txt
C++/plans/: #Icarous2.ple#  CONFLICT.ple  CONFLICT_MANAGEMENT.ple  ConflictDetector.ple  GOTO_POSITION.ple  Icarous.ple  Icarous2.ple  MISSION.ple  TRAFFIC_RESOLUTION.ple  interface-config.xml  interface-config2.xml  simple.ple
C++/plexil-4/: Versions
C++/src/: ACCoRDConfig.cpp  AircraftState.cpp  AlertLevels.cpp  AlertThresholds.cpp  AziEquiProjection.cpp  BandsRegion.cpp  BoundingRectangle.cpp  CD2D.cpp  CD3D.cpp  CDCylinder.cpp  CDPolyIter2D.cpp  ColoredValue.cpp  Constants.cpp  CriteriaCore.cpp  CriticalVectors2D.cpp  DAAGeofencingExample.cpp  DCPAUrgencyStrategy.cpp  Daidalus.cpp  DaidalusFileWalker.cpp  Detection3DParameterReader.cpp  Detection3DParameterWriter.cpp  DetectionPolygonParameterWriter.cpp  ENUProjection.cpp  FixedAircraftUrgencyStrategy.cpp  GreatCircle.cpp  Horizontal.cpp  Integerval.cpp  Interval.cpp  IntervalSet.cpp  KinematicBands.cpp  KinematicBandsCore.cpp  KinematicBandsParameters.cpp  KinematicIntegerBands.cpp  KinematicMultiBands.cpp  KinematicRealBands.cpp  KinematicTrkBands.cpp  Kinematics.cpp  LatLonAlt.cpp  LaunchIcarous.cpp  LaunchIcarousPlexil.cpp  (+43 more)
Modules/: CMakeLists.txt  QuadCopterSim  README.md
Modules/ACCoRD/: CMakeLists.txt  DaidalusAlerting.cpp  DaidalusBatch.cpp  DaidalusExample.cpp
Modules/Cognition/: CMakeLists.txt  Cognition.cpp  Cognition.h  Cognition.hpp  CognitionUtil.cpp  Commands.hpp  Wrappers.cpp  cognition_core.h  conflict_management.c  flight_phases.c
Modules/Core/: QuadCopterSim
Modules/FlightDataManager/: CMakeLists.txt  FlightData.cpp  FlightData.h  FlightDataWrapper.cpp  FlightDataWrapper.h  GenericObject.cpp  Icarous_msg.h  fence.cpp
Modules/GeofenceMonitor/: CMakeLists.txt  GeofenceMonitor.cpp  GeofenceMonitor.h
Modules/Guidance/: CMakeLists.txt  Guidance.cpp  Guidance.hpp  guidanceFunctions.c  guidanceFunctions.h
Modules/Interfaces/: Interfaces.h
Modules/Merger/: CMakeLists.txt  Merger.cpp  Merger.h  Merger.hpp  scheduler.cpp  scheduler.h  test.cpp
Modules/Plexil/: CMakeLists.txt  pack.txt
Modules/TrafficMonitor/: CMakeLists.txt  TrafficMonitor.cpp  TrafficMonitor.h
Modules/TrajectoryPlanners/: AstarPlan.cpp  CMakeLists.txt  Dynamics.h  GridAstarPlan.cpp  PathPlanner.cpp  PathPlanner.h  RRTPlan.cpp  SplinesPlan.cpp
Modules/Utils/: CMakeLists.txt  GenericObject.cpp  GenericObject.h  UtilFunctions.cpp  UtilFunctions.h  fence.cpp
apps/apInterface/: CMakeLists.txt  app.cfg
apps/arducopter/: CMakeLists.txt  app.cfg
apps/ardupilot/: CMakeLists.txt
apps/dds_interface/: CMakeLists.txt  README.md  app.cfg
apps/flarm/: CMakeLists.txt  app.cfg
apps/geofence/: CMakeLists.txt  app.cfg
apps/gsInterface/: CMakeLists.txt  app.cfg
apps/guidance/: CMakeLists.txt  app.cfg
apps/logger/: CMakeLists.txt  app.cfg
apps/merger/: CMakeLists.txt  app.cfg
apps/plexil/: CMakeLists.txt  README.md  app.cfg
apps/raft/: CMakeLists.txt  app.cfg
apps/rotorsim/: CMakeLists.txt  app.cfg  main.cpp
apps/tracker/: CMakeLists.txt  app.cfg
apps/tracking/: CMakeLists.txt  app.cfg
apps/traffic/: CMakeLists.txt  app.cfg
apps/trajectory/: CMakeLists.txt  README.md  app.cfg
apps/zmq_iface/: CMakeLists.txt  app.cfg
(+10630 files in other folders)
