cmake_minimum_required(VERSION 3.7)
project(C__)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        include/ACCoRD/ACCoRDConfig.h
        include/ACCoRD/AircraftState.h
        include/ACCoRD/AlertingMofN.h
        include/ACCoRD/AlertLevels.h
        include/ACCoRD/AlertThresholds.h
        include/ACCoRD/AziEquiProjection.h
        include/ACCoRD/Bands.h
        include/ACCoRD/BandsCore.h
        include/ACCoRD/BandsRange.h
        include/ACCoRD/BandsRegion.h
        include/ACCoRD/BoundingRectangle.h
        include/ACCoRD/CD2D.h
        include/ACCoRD/CD3D.h
        include/ACCoRD/CD3DTable.h
        include/ACCoRD/CDCylinder.h
        include/ACCoRD/CDII.h
        include/ACCoRD/CDIICore.h
        include/ACCoRD/CDIIPolygon.h
        include/ACCoRD/CDPolycarp.h
        include/ACCoRD/CDPolyIter.h
        include/ACCoRD/CDPolyIter2D.h
        include/ACCoRD/CDSI.h
        include/ACCoRD/CDSICore.h
        include/ACCoRD/CDSIPolygon.h
        include/ACCoRD/CDSS.h
        include/ACCoRD/CDSSCore.h
        include/ACCoRD/ColoredValue.h
        include/ACCoRD/ConflictBandsTwoTimes.h
        include/ACCoRD/ConflictData.h
        include/ACCoRD/Constants.h
        include/ACCoRD/Consts.h
        include/ACCoRD/CoordinationFilter.h
        include/ACCoRD/CR3D.h
        include/ACCoRD/Criteria.h
        include/ACCoRD/CriteriaCore.h
        include/ACCoRD/CriticalVectors.h
        include/ACCoRD/CriticalVectors2D.h
        include/ACCoRD/CriticalVectorsSI.h
        include/ACCoRD/CRSS.h
        include/ACCoRD/CRSSConfig.h
        include/ACCoRD/Daidalus.h
        include/ACCoRD/DaidalusFileWalker.h
        include/ACCoRD/DataServer.h
        include/ACCoRD/DCPAUrgencyStrategy.h
        include/ACCoRD/Debug.h
        include/ACCoRD/DebugSupport.h
        include/ACCoRD/DensityGrid.h
        include/ACCoRD/DensityGridAStarSearch.h
        include/ACCoRD/DensityGridMovingPolys.h
        include/ACCoRD/DensityGridMovingPolysEst.h
        include/ACCoRD/DensityGridSearch.h
        include/ACCoRD/DensityGridTimed.h
        include/ACCoRD/DensityGridTimedSearch.h
        include/ACCoRD/Detection3D.h
        include/ACCoRD/Detection3DAcceptor.h
        include/ACCoRD/Detection3DParameterReader.h
        include/ACCoRD/Detection3DParameterWriter.h
        include/ACCoRD/Detection3DResAcceptor.h
        include/ACCoRD/DetectionPolygon.h
        include/ACCoRD/DetectionPolygonAcceptor.h
        include/ACCoRD/DetectionPolygonParameterReader.h
        include/ACCoRD/DetectionPolygonParameterWriter.h
        include/ACCoRD/DetectionPolygonResAcceptor.h
        include/ACCoRD/ENUProjection.h
        include/ACCoRD/ErrorLog.h
        include/ACCoRD/ErrorReporter.h
        include/ACCoRD/EuclideanProjection.h
        include/ACCoRD/FilePushTransmitter.h
        include/ACCoRD/FixedAircraftUrgencyStrategy.h
        include/ACCoRD/format.h
        include/ACCoRD/General3DState.h
        include/ACCoRD/GeneralPlan.h
        include/ACCoRD/GeneralPlanWriter.h
        include/ACCoRD/GeneralState.h
        include/ACCoRD/GeneralStateReader.h
        include/ACCoRD/GeneralStateWriter.h
        include/ACCoRD/GenericDHStateBands.h
        include/ACCoRD/GenericIntentBands.h
        include/ACCoRD/GenericStateBands.h
        include/ACCoRD/GreatCircle.h
        include/ACCoRD/GsPlan.h
        include/ACCoRD/Horizontal.h
        include/ACCoRD/Integerval.h
        include/ACCoRD/IntentBands.h
        include/ACCoRD/IntentBandsCore.h
        include/ACCoRD/Interval.h
        include/ACCoRD/IntervalSet.h
        include/ACCoRD/KinematicAltBands.h
        include/ACCoRD/KinematicBands.h
        include/ACCoRD/KinematicBandsCore.h
        include/ACCoRD/KinematicBandsParameters.h
        include/ACCoRD/KinematicGsBands.h
        include/ACCoRD/KinematicIntegerBands.h
        include/ACCoRD/KinematicMultiBands.h
        include/ACCoRD/KinematicRealBands.h
        include/ACCoRD/Kinematics.h
        include/ACCoRD/KinematicsDist.h
        include/ACCoRD/KinematicsLatLon.h
        include/ACCoRD/KinematicsPosition.h
        include/ACCoRD/KinematicTrkBands.h
        include/ACCoRD/KinematicVsBands.h
        include/ACCoRD/LatLonAlt.h
        include/ACCoRD/LossData.h
        include/ACCoRD/MovingPolygon2D.h
        include/ACCoRD/MovingPolygon3D.h
        include/ACCoRD/NavPoint.h
        include/ACCoRD/NoneUrgencyStrategy.h
        include/ACCoRD/OrthographicProjection.h
        include/ACCoRD/OutputList.h
        include/ACCoRD/Pair.h
        include/ACCoRD/ParameterAcceptor.h
        include/ACCoRD/ParameterData.h
        include/ACCoRD/ParameterEntry.h
        include/ACCoRD/ParameterProvider.h
        include/ACCoRD/ParameterReader.h
        include/ACCoRD/ParameterTable.h
        include/ACCoRD/Plan.h
        include/ACCoRD/PlanIO.h
        include/ACCoRD/PlanReader.h
        include/ACCoRD/PlanUtil.h
        include/ACCoRD/PlanWriter.h
        include/ACCoRD/Point.h
        include/ACCoRD/Poly2D.h
        include/ACCoRD/Poly3D.h
        include/ACCoRD/Polycarp3D.h
        include/ACCoRD/PolycarpAcceptablePolygon.h
        include/ACCoRD/PolycarpContain.h
        include/ACCoRD/PolycarpDetection.h
        include/ACCoRD/PolycarpDoubleQuadratic.h
        include/ACCoRD/PolycarpEdgeProximity.h
        include/ACCoRD/PolycarpQuadMinmax.h
        include/ACCoRD/PolycarpResolution.h
        include/ACCoRD/PolyPath.h
        include/ACCoRD/PolyReader.h
        include/ACCoRD/PolyUtil.h
        include/ACCoRD/Position.h
        include/ACCoRD/PositionUtil.h
        include/ACCoRD/Priority.h
        include/ACCoRD/PriorityCore.h
        include/ACCoRD/ProjectedKinematics.h
        include/ACCoRD/Projection.h
        include/ACCoRD/Quad.h
        include/ACCoRD/Route.h
        include/ACCoRD/SafetyBuffers.h
        include/ACCoRD/SeparatedInput.h
        include/ACCoRD/SeparatedOutput.h
        include/ACCoRD/SequenceReader.h
        include/ACCoRD/SimpleMovingPoly.h
        include/ACCoRD/SimpleNoPolarProjection.h
        include/ACCoRD/SimplePoly.h
        include/ACCoRD/SimpleProjection.h
        include/ACCoRD/StateReader.h
        include/ACCoRD/StateVector.h
        include/ACCoRD/StateWriter.h
        include/ACCoRD/string_util.h
        include/ACCoRD/TangentLine.h
        include/ACCoRD/TargetUrgency.h
        include/ACCoRD/TCAS2D.h
        include/ACCoRD/TCAS3D.h
        include/ACCoRD/TCASTable.h
        include/ACCoRD/TcpData.h
        include/ACCoRD/TrafficCoreState.h
        include/ACCoRD/TrafficState.h
        include/ACCoRD/TrajGen.h
        include/ACCoRD/TrajTemplates.h
        include/ACCoRD/Transmitter.h
        include/ACCoRD/Triple.h
        include/ACCoRD/TripleBands.h
        include/ACCoRD/Tuple5.h
        include/ACCoRD/Tuple6.h
        include/ACCoRD/TurnGeneration.h
        include/ACCoRD/Units.h
        include/ACCoRD/UrgencyStrategy.h
        include/ACCoRD/Util.h
        include/ACCoRD/Vect2.h
        include/ACCoRD/Vect3.h
        include/ACCoRD/Vect4.h
        include/ACCoRD/VectFuns.h
        include/ACCoRD/Velocity.h
        include/ACCoRD/Vertical.h
        include/ACCoRD/WCV_HZ.h
        include/ACCoRD/WCV_TAUMOD.h
        include/ACCoRD/WCV_TCOA.h
        include/ACCoRD/WCV_TCPA.h
        include/ACCoRD/WCV_TEP.h
        include/ACCoRD/WCV_tvar.h
        include/ACCoRD/WCV_Vertical.h
        include/ACCoRD/WCV_VMOD.h
        include/ACCoRD/WCVTable.h
        include/ACCoRD/WeatherUtil.h
        include/ICAROUS/AircraftData.h
        include/ICAROUS/ConflictDetection.h
        include/ICAROUS/FlightManagementSystem.h
        include/ICAROUS/GenericObject.h
        include/ICAROUS/Geofence.h
        include/ICAROUS/Icarous.h
        include/ICAROUS/Icarous_msg.h
        include/ICAROUS/Port.h
        include/ICAROUS/QuadFMS.h
        include/ICAROUS/Resolution.h
        include/ICAROUS/RRT.h
        include/PLEXIL/IpcIcarousAdapter.h
        libs/mavlink/ardupilotmega/ardupilotmega.h
        libs/mavlink/ardupilotmega/mavlink.h
        libs/mavlink/ardupilotmega/mavlink_msg_ahrs.h
        libs/mavlink/ardupilotmega/mavlink_msg_ahrs2.h
        libs/mavlink/ardupilotmega/mavlink_msg_ahrs3.h
        libs/mavlink/ardupilotmega/mavlink_msg_airspeed_autocal.h
        libs/mavlink/ardupilotmega/mavlink_msg_ap_adc.h
        libs/mavlink/ardupilotmega/mavlink_msg_autopilot_version_request.h
        libs/mavlink/ardupilotmega/mavlink_msg_battery2.h
        libs/mavlink/ardupilotmega/mavlink_msg_camera_feedback.h
        libs/mavlink/ardupilotmega/mavlink_msg_camera_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_compassmot_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_data16.h
        libs/mavlink/ardupilotmega/mavlink_msg_data32.h
        libs/mavlink/ardupilotmega/mavlink_msg_data64.h
        libs/mavlink/ardupilotmega/mavlink_msg_data96.h
        libs/mavlink/ardupilotmega/mavlink_msg_digicam_configure.h
        libs/mavlink/ardupilotmega/mavlink_msg_digicam_control.h
        libs/mavlink/ardupilotmega/mavlink_msg_ekf_status_report.h
        libs/mavlink/ardupilotmega/mavlink_msg_fence_fetch_point.h
        libs/mavlink/ardupilotmega/mavlink_msg_fence_point.h
        libs/mavlink/ardupilotmega/mavlink_msg_fence_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_gimbal_control.h
        libs/mavlink/ardupilotmega/mavlink_msg_gimbal_report.h
        libs/mavlink/ardupilotmega/mavlink_msg_gimbal_torque_cmd_report.h
        libs/mavlink/ardupilotmega/mavlink_msg_gopro_get_request.h
        libs/mavlink/ardupilotmega/mavlink_msg_gopro_get_response.h
        libs/mavlink/ardupilotmega/mavlink_msg_gopro_heartbeat.h
        libs/mavlink/ardupilotmega/mavlink_msg_gopro_set_request.h
        libs/mavlink/ardupilotmega/mavlink_msg_gopro_set_response.h
        libs/mavlink/ardupilotmega/mavlink_msg_hwstatus.h
        libs/mavlink/ardupilotmega/mavlink_msg_led_control.h
        libs/mavlink/ardupilotmega/mavlink_msg_limits_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_mag_cal_progress.h
        libs/mavlink/ardupilotmega/mavlink_msg_mag_cal_report.h
        libs/mavlink/ardupilotmega/mavlink_msg_meminfo.h
        libs/mavlink/ardupilotmega/mavlink_msg_mount_configure.h
        libs/mavlink/ardupilotmega/mavlink_msg_mount_control.h
        libs/mavlink/ardupilotmega/mavlink_msg_mount_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_pid_tuning.h
        libs/mavlink/ardupilotmega/mavlink_msg_radio.h
        libs/mavlink/ardupilotmega/mavlink_msg_rally_fetch_point.h
        libs/mavlink/ardupilotmega/mavlink_msg_rally_point.h
        libs/mavlink/ardupilotmega/mavlink_msg_rangefinder.h
        libs/mavlink/ardupilotmega/mavlink_msg_remote_log_block_status.h
        libs/mavlink/ardupilotmega/mavlink_msg_remote_log_data_block.h
        libs/mavlink/ardupilotmega/mavlink_msg_rpm.h
        libs/mavlink/ardupilotmega/mavlink_msg_sensor_offsets.h
        libs/mavlink/ardupilotmega/mavlink_msg_set_mag_offsets.h
        libs/mavlink/ardupilotmega/mavlink_msg_simstate.h
        libs/mavlink/ardupilotmega/mavlink_msg_wind.h
        libs/mavlink/ardupilotmega/testsuite.h
        libs/mavlink/ardupilotmega/version.h
        libs/mavlink/common/common.h
        libs/mavlink/common/mavlink.h
        libs/mavlink/common/mavlink_msg_actuator_control_target.h
        libs/mavlink/common/mavlink_msg_adsb_vehicle.h
        libs/mavlink/common/mavlink_msg_altitude.h
        libs/mavlink/common/mavlink_msg_att_pos_mocap.h
        libs/mavlink/common/mavlink_msg_attitude.h
        libs/mavlink/common/mavlink_msg_attitude_quaternion.h
        libs/mavlink/common/mavlink_msg_attitude_quaternion_cov.h
        libs/mavlink/common/mavlink_msg_attitude_target.h
        libs/mavlink/common/mavlink_msg_auth_key.h
        libs/mavlink/common/mavlink_msg_autopilot_version.h
        libs/mavlink/common/mavlink_msg_battery_status.h
        libs/mavlink/common/mavlink_msg_camera_trigger.h
        libs/mavlink/common/mavlink_msg_change_operator_control.h
        libs/mavlink/common/mavlink_msg_change_operator_control_ack.h
        libs/mavlink/common/mavlink_msg_command_ack.h
        libs/mavlink/common/mavlink_msg_command_int.h
        libs/mavlink/common/mavlink_msg_command_long.h
        libs/mavlink/common/mavlink_msg_control_system_state.h
        libs/mavlink/common/mavlink_msg_data_stream.h
        libs/mavlink/common/mavlink_msg_data_transmission_handshake.h
        libs/mavlink/common/mavlink_msg_debug.h
        libs/mavlink/common/mavlink_msg_debug_vect.h
        libs/mavlink/common/mavlink_msg_distance_sensor.h
        libs/mavlink/common/mavlink_msg_encapsulated_data.h
        libs/mavlink/common/mavlink_msg_estimator_status.h
        libs/mavlink/common/mavlink_msg_extended_sys_state.h
        libs/mavlink/common/mavlink_msg_file_transfer_protocol.h
        libs/mavlink/common/mavlink_msg_follow_target.h
        libs/mavlink/common/mavlink_msg_global_position_int.h
        libs/mavlink/common/mavlink_msg_global_position_int_cov.h
        libs/mavlink/common/mavlink_msg_global_vision_position_estimate.h
        libs/mavlink/common/mavlink_msg_gps2_raw.h
        libs/mavlink/common/mavlink_msg_gps2_rtk.h
        libs/mavlink/common/mavlink_msg_gps_global_origin.h
        libs/mavlink/common/mavlink_msg_gps_inject_data.h
        libs/mavlink/common/mavlink_msg_gps_raw_int.h
        libs/mavlink/common/mavlink_msg_gps_rtcm_data.h
        libs/mavlink/common/mavlink_msg_gps_rtk.h
        libs/mavlink/common/mavlink_msg_gps_status.h
        libs/mavlink/common/mavlink_msg_heartbeat.h
        libs/mavlink/common/mavlink_msg_highres_imu.h
        libs/mavlink/common/mavlink_msg_hil_controls.h
        libs/mavlink/common/mavlink_msg_hil_gps.h
        libs/mavlink/common/mavlink_msg_hil_optical_flow.h
        libs/mavlink/common/mavlink_msg_hil_rc_inputs_raw.h
        libs/mavlink/common/mavlink_msg_hil_sensor.h
        libs/mavlink/common/mavlink_msg_hil_state.h
        libs/mavlink/common/mavlink_msg_hil_state_quaternion.h
        libs/mavlink/common/mavlink_msg_home_position.h
        libs/mavlink/common/mavlink_msg_landing_target.h
        libs/mavlink/common/mavlink_msg_local_position_ned.h
        libs/mavlink/common/mavlink_msg_local_position_ned_cov.h
        libs/mavlink/common/mavlink_msg_local_position_ned_system_global_offset.h
        libs/mavlink/common/mavlink_msg_log_data.h
        libs/mavlink/common/mavlink_msg_log_entry.h
        libs/mavlink/common/mavlink_msg_log_erase.h
        libs/mavlink/common/mavlink_msg_log_request_data.h
        libs/mavlink/common/mavlink_msg_log_request_end.h
        libs/mavlink/common/mavlink_msg_log_request_list.h
        libs/mavlink/common/mavlink_msg_manual_control.h
        libs/mavlink/common/mavlink_msg_manual_setpoint.h
        libs/mavlink/common/mavlink_msg_memory_vect.h
        libs/mavlink/common/mavlink_msg_message_interval.h
        libs/mavlink/common/mavlink_msg_mission_ack.h
        libs/mavlink/common/mavlink_msg_mission_clear_all.h
        libs/mavlink/common/mavlink_msg_mission_count.h
        libs/mavlink/common/mavlink_msg_mission_current.h
        libs/mavlink/common/mavlink_msg_mission_item.h
        libs/mavlink/common/mavlink_msg_mission_item_int.h
        libs/mavlink/common/mavlink_msg_mission_item_reached.h
        libs/mavlink/common/mavlink_msg_mission_request.h
        libs/mavlink/common/mavlink_msg_mission_request_int.h
        libs/mavlink/common/mavlink_msg_mission_request_list.h
        libs/mavlink/common/mavlink_msg_mission_request_partial_list.h
        libs/mavlink/common/mavlink_msg_mission_set_current.h
        libs/mavlink/common/mavlink_msg_mission_write_partial_list.h
        libs/mavlink/common/mavlink_msg_named_value_float.h
        libs/mavlink/common/mavlink_msg_named_value_int.h
        libs/mavlink/common/mavlink_msg_nav_controller_output.h
        libs/mavlink/common/mavlink_msg_optical_flow.h
        libs/mavlink/common/mavlink_msg_optical_flow_rad.h
        libs/mavlink/common/mavlink_msg_param_map_rc.h
        libs/mavlink/common/mavlink_msg_param_request_list.h
        libs/mavlink/common/mavlink_msg_param_request_read.h
        libs/mavlink/common/mavlink_msg_param_set.h
        libs/mavlink/common/mavlink_msg_param_value.h
        libs/mavlink/common/mavlink_msg_ping.h
        libs/mavlink/common/mavlink_msg_position_target_global_int.h
        libs/mavlink/common/mavlink_msg_position_target_local_ned.h
        libs/mavlink/common/mavlink_msg_power_status.h
        libs/mavlink/common/mavlink_msg_radio_status.h
        libs/mavlink/common/mavlink_msg_raw_imu.h
        libs/mavlink/common/mavlink_msg_raw_pressure.h
        libs/mavlink/common/mavlink_msg_rc_channels.h
        libs/mavlink/common/mavlink_msg_rc_channels_override.h
        libs/mavlink/common/mavlink_msg_rc_channels_raw.h
        libs/mavlink/common/mavlink_msg_rc_channels_scaled.h
        libs/mavlink/common/mavlink_msg_request_data_stream.h
        libs/mavlink/common/mavlink_msg_resource_request.h
        libs/mavlink/common/mavlink_msg_safety_allowed_area.h
        libs/mavlink/common/mavlink_msg_safety_set_allowed_area.h
        libs/mavlink/common/mavlink_msg_scaled_imu.h
        libs/mavlink/common/mavlink_msg_scaled_imu2.h
        libs/mavlink/common/mavlink_msg_scaled_imu3.h
        libs/mavlink/common/mavlink_msg_scaled_pressure.h
        libs/mavlink/common/mavlink_msg_scaled_pressure2.h
        libs/mavlink/common/mavlink_msg_scaled_pressure3.h
        libs/mavlink/common/mavlink_msg_serial_control.h
        libs/mavlink/common/mavlink_msg_servo_output_raw.h
        libs/mavlink/common/mavlink_msg_set_actuator_control_target.h
        libs/mavlink/common/mavlink_msg_set_attitude_target.h
        libs/mavlink/common/mavlink_msg_set_gps_global_origin.h
        libs/mavlink/common/mavlink_msg_set_home_position.h
        libs/mavlink/common/mavlink_msg_set_mode.h
        libs/mavlink/common/mavlink_msg_set_position_target_global_int.h
        libs/mavlink/common/mavlink_msg_set_position_target_local_ned.h
        libs/mavlink/common/mavlink_msg_sim_state.h
        libs/mavlink/common/mavlink_msg_statustext.h
        libs/mavlink/common/mavlink_msg_sys_status.h
        libs/mavlink/common/mavlink_msg_system_time.h
        libs/mavlink/common/mavlink_msg_terrain_check.h
        libs/mavlink/common/mavlink_msg_terrain_data.h
        libs/mavlink/common/mavlink_msg_terrain_report.h
        libs/mavlink/common/mavlink_msg_terrain_request.h
        libs/mavlink/common/mavlink_msg_timesync.h
        libs/mavlink/common/mavlink_msg_v2_extension.h
        libs/mavlink/common/mavlink_msg_vfr_hud.h
        libs/mavlink/common/mavlink_msg_vibration.h
        libs/mavlink/common/mavlink_msg_vicon_position_estimate.h
        libs/mavlink/common/mavlink_msg_vision_position_estimate.h
        libs/mavlink/common/mavlink_msg_vision_speed_estimate.h
        libs/mavlink/common/mavlink_msg_wind_cov.h
        libs/mavlink/common/testsuite.h
        libs/mavlink/common/version.h
        libs/mavlink/icarous/icarous.h
        libs/mavlink/icarous/mavlink.h
        libs/mavlink/icarous/mavlink_msg_heartbeat_icarous.h
        libs/mavlink/icarous/mavlink_msg_kinematic_bands.h
        libs/mavlink/icarous/testsuite.h
        libs/mavlink/icarous/version.h
        libs/mavlink/checksum.h
        libs/mavlink/mavlink_conversions.h
        libs/mavlink/mavlink_helpers.h
        libs/mavlink/mavlink_types.h
        libs/mavlink/protocol.h
        src/ACCoRD/ACCoRDConfig.cpp
        src/ACCoRD/AircraftState.cpp
        src/ACCoRD/AlertingMofN.cpp
        src/ACCoRD/AlertLevels.cpp
        src/ACCoRD/AlertThresholds.cpp
        src/ACCoRD/AziEquiProjection.cpp
        src/ACCoRD/Bands.cpp
        src/ACCoRD/BandsCore.cpp
        src/ACCoRD/BandsRange.cpp
        src/ACCoRD/BandsRegion.cpp
        src/ACCoRD/BoundingRectangle.cpp
        src/ACCoRD/CD2D.cpp
        src/ACCoRD/CD3D.cpp
        src/ACCoRD/CD3DTable.cpp
        src/ACCoRD/CDCylinder.cpp
        src/ACCoRD/CDII.cpp
        src/ACCoRD/CDIICore.cpp
        src/ACCoRD/CDIIPolygon.cpp
        src/ACCoRD/CDPolycarp.cpp
        src/ACCoRD/CDPolyIter.cpp
        src/ACCoRD/CDPolyIter2D.cpp
        src/ACCoRD/CDSI.cpp
        src/ACCoRD/CDSICore.cpp
        src/ACCoRD/CDSIPolygon.cpp
        src/ACCoRD/CDSS.cpp
        src/ACCoRD/CDSSCore.cpp
        src/ACCoRD/ColoredValue.cpp
        src/ACCoRD/ConflictBandsTwoTimes.cpp
        src/ACCoRD/ConflictData.cpp
        src/ACCoRD/Constants.cpp
        src/ACCoRD/CoordinationFilter.cpp
        src/ACCoRD/CR3D.cpp
        src/ACCoRD/Criteria.cpp
        src/ACCoRD/CriteriaCore.cpp
        src/ACCoRD/CriticalVectors.cpp
        src/ACCoRD/CriticalVectors2D.cpp
        src/ACCoRD/CriticalVectorsSI.cpp
        src/ACCoRD/CRSS.cpp
        src/ACCoRD/CRSSConfig.cpp
        src/ACCoRD/Daidalus.cpp
        src/ACCoRD/DaidalusFileWalker.cpp
        src/ACCoRD/DataServer.cpp
        src/ACCoRD/DCPAUrgencyStrategy.cpp
        src/ACCoRD/Debug.cpp
        src/ACCoRD/DebugSupport.cpp
        src/ACCoRD/DensityGrid.cpp
        src/ACCoRD/DensityGridAStarSearch.cpp
        src/ACCoRD/DensityGridMovingPolys.cpp
        src/ACCoRD/DensityGridMovingPolysEst.cpp
        src/ACCoRD/DensityGridTimed.cpp
        src/ACCoRD/Detection3DParameterReader.cpp
        src/ACCoRD/Detection3DParameterWriter.cpp
        src/ACCoRD/DetectionPolygonParameterReader.cpp
        src/ACCoRD/DetectionPolygonParameterWriter.cpp
        src/ACCoRD/ENUProjection.cpp
        src/ACCoRD/ErrorLog.cpp
        src/ACCoRD/FilePushTransmitter.cpp
        src/ACCoRD/FixedAircraftUrgencyStrategy.cpp
        src/ACCoRD/format.cpp
        src/ACCoRD/General3DState.cpp
        src/ACCoRD/GeneralPlan.cpp
        src/ACCoRD/GeneralPlanWriter.cpp
        src/ACCoRD/GeneralState.cpp
        src/ACCoRD/GeneralStateReader.cpp
        src/ACCoRD/GeneralStateWriter.cpp
        src/ACCoRD/GreatCircle.cpp
        src/ACCoRD/GsPlan.cpp
        src/ACCoRD/Horizontal.cpp
        src/ACCoRD/Integerval.cpp
        src/ACCoRD/IntentBands.cpp
        src/ACCoRD/IntentBandsCore.cpp
        src/ACCoRD/Interval.cpp
        src/ACCoRD/IntervalSet.cpp
        src/ACCoRD/KinematicAltBands.cpp
        src/ACCoRD/KinematicBands.cpp
        src/ACCoRD/KinematicBandsCore.cpp
        src/ACCoRD/KinematicBandsParameters.cpp
        src/ACCoRD/KinematicGsBands.cpp
        src/ACCoRD/KinematicIntegerBands.cpp
        src/ACCoRD/KinematicMultiBands.cpp
        src/ACCoRD/KinematicRealBands.cpp
        src/ACCoRD/Kinematics.cpp
        src/ACCoRD/KinematicsDist.cpp
        src/ACCoRD/KinematicsLatLon.cpp
        src/ACCoRD/KinematicsPosition.cpp
        src/ACCoRD/KinematicTrkBands.cpp
        src/ACCoRD/KinematicVsBands.cpp
        src/ACCoRD/LatLonAlt.cpp
        src/ACCoRD/LossData.cpp
        src/ACCoRD/MovingPolygon2D.cpp
        src/ACCoRD/MovingPolygon3D.cpp
        src/ACCoRD/NavPoint.cpp
        src/ACCoRD/NoneUrgencyStrategy.cpp
        src/ACCoRD/OrthographicProjection.cpp
        src/ACCoRD/ParameterData.cpp
        src/ACCoRD/ParameterEntry.cpp
        src/ACCoRD/Plan.cpp
        src/ACCoRD/PlanIO.cpp
        src/ACCoRD/PlanReader.cpp
        src/ACCoRD/PlanUtil.cpp
        src/ACCoRD/PlanWriter.cpp
        src/ACCoRD/Point.cpp
        src/ACCoRD/Poly2D.cpp
        src/ACCoRD/Poly3D.cpp
        src/ACCoRD/Polycarp3D.cpp
        src/ACCoRD/PolycarpAcceptablePolygon.cpp
        src/ACCoRD/PolycarpContain.cpp
        src/ACCoRD/PolycarpDetection.cpp
        src/ACCoRD/PolycarpDoubleQuadratic.cpp
        src/ACCoRD/PolycarpEdgeProximity.cpp
        src/ACCoRD/PolycarpQuadMinmax.cpp
        src/ACCoRD/PolycarpResolution.cpp
        src/ACCoRD/PolyPath.cpp
        src/ACCoRD/PolyUtil.cpp
        src/ACCoRD/Position.cpp
        src/ACCoRD/PositionUtil.cpp
        src/ACCoRD/Priority.cpp
        src/ACCoRD/PriorityCore.cpp
        src/ACCoRD/ProjectedKinematics.cpp
        src/ACCoRD/Projection.cpp
        src/ACCoRD/Route.cpp
        src/ACCoRD/SafetyBuffers.cpp
        src/ACCoRD/SeparatedInput.cpp
        src/ACCoRD/SeparatedOutput.cpp
        src/ACCoRD/SequenceReader.cpp
        src/ACCoRD/SimpleMovingPoly.cpp
        src/ACCoRD/SimpleNoPolarProjection.cpp
        src/ACCoRD/SimplePoly.cpp
        src/ACCoRD/SimpleProjection.cpp
        src/ACCoRD/StateReader.cpp
        src/ACCoRD/StateVector.cpp
        src/ACCoRD/StateWriter.cpp
        src/ACCoRD/string_util.cpp
        src/ACCoRD/TangentLine.cpp
        src/ACCoRD/TargetUrgency.cpp
        src/ACCoRD/TCAS2D.cpp
        src/ACCoRD/TCAS3D.cpp
        src/ACCoRD/TCASTable.cpp
        src/ACCoRD/TcpData.cpp
        src/ACCoRD/TrafficCoreState.cpp
        src/ACCoRD/TrafficState.cpp
        src/ACCoRD/TrajGen.cpp
        src/ACCoRD/TrajTemplates.cpp
        src/ACCoRD/TripleBands.cpp
        src/ACCoRD/TurnGeneration.cpp
        src/ACCoRD/Units.cpp
        src/ACCoRD/Util.cpp
        src/ACCoRD/Vect2.cpp
        src/ACCoRD/Vect3.cpp
        src/ACCoRD/Vect4.cpp
        src/ACCoRD/VectFuns.cpp
        src/ACCoRD/Velocity.cpp
        src/ACCoRD/Vertical.cpp
        src/ACCoRD/WCV_HZ.cpp
        src/ACCoRD/WCV_TAUMOD.cpp
        src/ACCoRD/WCV_TCOA.cpp
        src/ACCoRD/WCV_TCPA.cpp
        src/ACCoRD/WCV_TEP.cpp
        src/ACCoRD/WCV_tvar.cpp
        src/ACCoRD/WCV_VMOD.cpp
        src/ACCoRD/WCVTable.cpp
        src/ACCoRD/WeatherUtil.cpp
        src/ICAROUS/AircraftData.cpp
        src/ICAROUS/ConflictDetection.cpp
        src/ICAROUS/FlightManagementSystem.cpp
        src/ICAROUS/GenericObject.cpp
        src/ICAROUS/GeoFence.cpp
        src/ICAROUS/Icarous.cpp
        src/ICAROUS/Port.cpp
        src/ICAROUS/QuadFMS.cpp
        src/ICAROUS/Resolution.cpp
        src/ICAROUS/RRT.cpp
        src/INTERFACE/MavlinkInterface.cpp
        src/LaunchIcarous.cpp
        include/INTERFACE/MAVLinkInterface.h
        include/INTERFACE/Interface.h)

include_directories(include/ACCoRD include/ICAROUS include/PLEXIL libs/mavlink include/INTERFACE plexil-4/include)

add_executable(icarous ${SOURCE_FILES})
target_link_libraries(icarous pthread)
